--- a/src/utils/usercmd/Makefile.am
+++ b/src/utils/usercmd/Makefile.am
@@ -34,7 +34,7 @@ endif
 all: UserCmd.exe
 
 AdminService.cs: ../../webservices/iFolderAdmin.wsdl
-	wsdl /nologo /out:$@ $<
+	$(WSDL) /nologo /out:$@ $<
 
 UserCmd.exe: $(srcdir)/AssemblyInfo.cs $(UserCmd_CSFILES) $(UserCmd_RESOURCES)
 	$(CSC) /out:$@ $(CSCFLAGS) $(UserCmd_FLAGS) $(SIMIAS_LIBS) $(UserCmd_LIBS:%=/r:%) $(UserCmd_LIBPATH:%=/lib:%) $(UserCmd_RESOURCES:%=$(ICON_FLAG)%) $(UserCmd_CSFILES_CSC) $(DOC_FILE_CMD)
