Updated Server spec file for build service . Server needs mono 1.2.6
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7060 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/ifolder3-enterprise.spec.in
+++ b/package/linux/ifolder3-enterprise.spec.in
@@ -37,9 +37,9 @@ Url:            http://wwww.ifolder.com
 License:        GNU General Public License (GPL) v2 
 Group:          Productivity/Networking/Novell
 AutoReqProv:    on
-Requires:       mono-core >= 1.2.6
-Requires:       mono-data >= 1.2.6
-Requires:       mono-web >= 1.2.6
+Requires:       mono-core = 1.2.6
+Requires:       mono-data = 1.2.6
+Requires:       mono-web = 1.2.6
 Requires:       log4net >= 1.2.9 
 Requires:       mod_mono >= 1.2.5
 #Obsoletes:      %{name} < %{version}
