Fix to handle client upgrades for openSuse
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7063 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/package/linux/ifolder3-enterprise.spec.in
+++ b/package/linux/ifolder3-enterprise.spec.in
@@ -97,7 +97,7 @@ ln -sf %{prefix}/%_lib/simias/clients/ifolder3/ifolder3-linux.tar.gz \
 ln -sf %{prefix}/%_lib/simias/clients/ifolder3/ifolder3-linux.tar.gz \
         %{prefix}/%_lib/simias/web/update/unix/suse-linux-10.0/ifolder3-linux.tar.gz
 ln -sf %{prefix}/%_lib/simias/clients/ifolder3/ifolder3-linux.tar.gz \
-        %{prefix}/%_lib/simias/web/update/unix/opensuse-linux-10.3/ifolder3-linux.tar.gz
+        %{prefix}/%_lib/simias/web/update/unix/opensuse-linux/ifolder3-linux.tar.gz
 ln -sf %{prefix}/%_lib/simias/clients/ifolder3/ifolder3-windows.exe \
 	%{prefix}/%_lib/simias/web/update/windows/ifolder3-windows.exe
 ln -sf %{prefix}/%_lib/simias/clients/ifolder3/ifolder3-windows-x64.exe \
