--- a/src/server/Simias.ClientUpdate/unix-version.config
+++ b/src/server/Simias.ClientUpdate/unix-version.config
@@ -24,7 +24,7 @@
 		you are doing.
 	-->
 	<distribution match="DEFAULT">
-		<version>3.7.2.20</version>
+		<version>3.7.2.0</version>
 		<download-directory>default</download-directory>
 	</distribution>
 
@@ -37,7 +37,7 @@
 
 	<distribution match="SUSE LINUX 10.0 (i586)">
 		<version>3.6.1234.1</version>
-		<download-directory>suse-linux-10.0-i586</download-directory>
+		<download-directory>suse-linux-10.0</download-directory>
 	</distribution>
 
 	The following is an example of how to specify upgrade files for Novell
@@ -50,14 +50,19 @@
 
 	-->
 
-	<distribution match="SUSE Linux Enterprise">
+	<distribution match="SUSE Linux Enterprise 10">
 		<version>3.7.2.0</version>
-		<download-directory>suse-linux-10.0-i586</download-directory>
+		<download-directory>suse-linux-10.0</download-directory>
 	</distribution>
 
-	<distribution match="openSUSE 10.3">
+	<distribution match="SUSE Linux Enterprise 11">
                 <version>3.7.2.0</version>
-                <download-directory>opensuse-linux-10.3-i586</download-directory>
+                <download-directory>suse-linux-11.0</download-directory>
+        </distribution>
+
+	<distribution match="openSUSE">
+                <version>3.7.2.0</version>
+                <download-directory>opensuse-linux</download-directory>
         </distribution>
 
 </versioninfo>
