--- a/src/server/Simias.ClientUpdate/Makefile.am
+++ b/src/server/Simias.ClientUpdate/Makefile.am
@@ -36,9 +36,8 @@ install-exec-local: ClientUpdate.dll $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix
 	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix/default
 	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix/suse-linux-10.0
-	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix/opensuse-linux-10.3
+	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix/opensuse-linux
 	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix/suse-linux-11.0
-	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/unix/opensuse-linux-11.1
 	$(mkinstalldirs) $(DESTDIR)$(webdir)/update/mac
 	$(INSTALL_PROGRAM) ClientUpdate.asmx $(DESTDIR)$(webdir)
 	$(INSTALL_PROGRAM) ClientUpdateHandler.ashx $(DESTDIR)$(webdir)
@@ -49,12 +48,10 @@ install-exec-local: ClientUpdate.dll $(DATA_FILES)
 	$(INSTALL_PROGRAM) install-ifolder-script.sh $(DESTDIR)$(webdir)/update/unix/default
 	$(INSTALL_PROGRAM) install-ifolder.sh $(DESTDIR)$(webdir)/update/unix/suse-linux-10.0
 	$(INSTALL_PROGRAM) install-ifolder-script.sh $(DESTDIR)$(webdir)/update/unix/suse-linux-10.0
-	$(INSTALL_PROGRAM) install-ifolder.sh $(DESTDIR)$(webdir)/update/unix/opensuse-linux-10.3
-	$(INSTALL_PROGRAM) install-ifolder-script.sh $(DESTDIR)$(webdir)/update/unix/opensuse-linux-10.3
 	$(INSTALL_PROGRAM) install-ifolder.sh $(DESTDIR)$(webdir)/update/unix/suse-linux-11.0
 	$(INSTALL_PROGRAM) install-ifolder-script.sh $(DESTDIR)$(webdir)/update/unix/suse-linux-11.0
-	$(INSTALL_PROGRAM) install-ifolder.sh $(DESTDIR)$(webdir)/update/unix/opensuse-linux-11.1
-	$(INSTALL_PROGRAM) install-ifolder-script.sh $(DESTDIR)$(webdir)/update/unix/opensuse-linux-11.1
+	$(INSTALL_PROGRAM) install-ifolder.sh $(DESTDIR)$(webdir)/update/unix/opensuse-linux
+	$(INSTALL_PROGRAM) install-ifolder-script.sh $(DESTDIR)$(webdir)/update/unix/opensuse-linux
 	$(INSTALL_PROGRAM) mac-version.config $(DESTDIR)$(webdir)/update/mac
 	
 uninstall-local:
