--- a/src/server/setup/mod-mono-server2.in
+++ b/src/server/setup/mod-mono-server2.in
@@ -25,37 +25,18 @@
 #*
 #*-----------------------------------------------------------------------------
 #*
-#*                 $Author: Rob
+#*                 $Author: Mahabaleshwar M A (amahabaleshwar@novell.com)
 #*                 $Modified by: <Modifier>
 #*                 $Mod Date: <Date Modified>
 #*                 $Revision: 0.1
 #*-----------------------------------------------------------------------------
 #* This module is used to:
-#*        <iFolder simias-server-setup setup script >
+#*        <iFolder  mod-mono-server2 wrapper script >
 #*
 #*
 #*******************************************************************************/
 
-
-rpm -q novell-ifolder-mono > /dev/null 2>&1
-if [ $? -gt 0 ]
-then
-
-	export MONO_PATH=@_webbindir_@:@_bindir_@
-	export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@_webbindir_@
-	export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:@_webbindir_@
-	cd @_bindir_@
-
-	mono @_bindir_@/SimiasServerSetup.exe "$@"
-
-else
-	MONO_RUNTIME_PATH=@_bindir_@/../mono
-	export MONO_PATH=$MONO_RUNTIME_PATH/lib/mono/:$MONO_RUNTIME_PATH/lib/mono/2.0:@_webbindir_@:@_bindir_@
-	source $MONO_RUNTIME_PATH/bin/novell-ifolder-mono-environment.sh
-	export MONO_CFG_DIR=$MONO_RUNTIME_PATH/etc
-	export IFOLDER_MOD_MONO_SERVER2_PATH=@_bindir_@
-	export IFOLDER_MONO_PATH=$MONO_RUNTIME_PATH
-	cd @_bindir_@
-
-	$MONO_RUNTIME_PATH/bin/mono @_bindir_@/SimiasServerSetup.exe "$@"
-fi
+export MONO_PATH=@_bindir_@/../mono/lib/mono/2.0/:@_bindir_@/../lib:@_bindir_@/../lib/simias/web/bin:@_bindir_@/../lib/simias/admin/bin:@_bindir_@/../lib/simias/webaccess/bin
+source @_bindir_@/../mono/bin/novell-ifolder-mono-environment.sh
+export MONO_CFG_DIR=@_bindir_@/../mono/etc
+exec @_bindir_@/../mono/bin/mod-mono-server2 "$@"
