Move RA load from store to domain
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7103 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/server/Simias.Server/Makefile.am
+++ b/src/server/Simias.Server/Makefile.am
@@ -35,7 +35,7 @@ SimiasServer_RESOURCES := $(SimiasServer_RESX:$(srcdir)/%.resx=$(srcdir)/Simias.
 
 SimiasServer_FLAGS = $(CSC_LIBFLAG)
 SimiasServer_LIBPATH = ../../core/SimiasLib.dll ../../core/SimiasClient $(DESTDIR)$(webbindir)
-SimiasServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll SimiasLib.dll SimiasClient.dll
+SimiasServer_LIBS = System.dll System.Data.dll $(SYSTEM_XML) System.Web.dll System.Web.Services.dll System.Security.dll SimiasLib.dll SimiasClient.dll
 
 EXTRA_DIST =  AssemblyInfo.cs.in DomainService.asmx Registration.asmx IdentitySyncManager.asmx $(SimiasServer_CSFILES) $(SimiasServer_RESX) ReportLogHandler.ashx
 
