simias-server-setup script is modified to handle 32 and 64 bit lib paths.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7107 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/server/setup/simias-server-setup.in
+++ b/src/server/setup/simias-server-setup.in
@@ -36,6 +36,11 @@
 #*
 #*******************************************************************************/
 
+OS_ARCH=`uname -m | grep -c x86_64`
+if [ $OS_ARCH -gt 0 ]
+then
+        export OS_ARCH=`uname -m`
+fi
 
 rpm -q novell-ifolder-mono > /dev/null 2>&1
 if [ $? -gt 0 ]
