Fix for .amsx request drop issue when server is too busy handling many requests.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@7152 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/src/core/WebService/mono.server.web.config
+++ b/src/core/WebService/mono.server.web.config
@@ -16,14 +16,20 @@
 		maxRequestLength="2097152"
 	/>
 
-<!-- take this out until we need it
 	<webServices>
+<!-- take this out until we need it
 		<soapExtensionTypes>
 			<add type="DumpExtension, extensions" priority="0" group="0" />
 			<add type="EncryptExtension, extensions" priority="1" group="0" />
 		</soapExtensionTypes>
-	</webServices>
 -->
+		<protocols>
+			<add name="HttpSoap"/>
+			<add name="HttpGet"/>
+			<add name="HttpPost"/>
+			<add name="AnyHttpSoap"/>
+		</protocols>
+	</webServices>
 		<authentication mode="None">
 		</authentication>
     	
@@ -46,7 +52,7 @@ adding it here again gives duplication error. With <clear/> tag all previous con
 removed from the connectionManagement List and this entry is added for this application. 
 -->
 			<clear/>
-				<add address="*" maxconnection="10" />
+				<add address="*" maxconnection="24" />
 		</connectionManagement>
 	</system.net>
 
